--- a/vite-vue/index.html
+++ b/vite-vue/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 引入字体文件 -->
+    <script src="//at.alicdn.com/t/font_3444305_phnd79j6jmc.js"></script>
     <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- 调用rem布局适配 -->
     <script src="/public/js/rem.ts"></script>
   </body>
 </html>
